# gridtk

./: .devcontainer.json  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  data.json  pixi.lock.license  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-nuitka.yml  build.yml  codeql.yml  coverage.yml  deploy.yml  documentation-links.yml  pre-commit.yml  publish-pypi.yml  qa.yml  tests.yml
.reuse/: dep5
doc/: conf.py  index.rst  install.rst  links.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_51a3a667cc001d6a___main___py.html  z_51a3a667cc001d6a_cli_py.html  z_51a3a667cc001d6a_manager_py.html  z_51a3a667cc001d6a_models_py.html  z_51a3a667cc001d6a_tools_py.html
src/gridtk/: __main__.py  cli.py  easy.py  gridtk.py  local.py  manager.py  models.py  setshell.py  sge.py  tools.py
src/gridtk/script/: grid.py  jman.py
tests/: test_gridtk.py
