# SPDX-FileCopyrightText: Copyright © 2022 Idiap Research Institute <contact@idiap.ch>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "gridtk"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Grid-enabled job submitter and execution monitor for Idiap"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
  { name = "Andre Anjos", email = "andre.anjos@idiap.ch" },
  { name = "Manuel Guenther", email = "manuel.guenther@idiap.ch" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["clapper", "sqlalchemy<2"]

[project.urls]
documentation = "https://gridtk.readthedocs.io/en/latest/"
homepage = "https://pypi.org/project/gridtk"
repository = "https://gitlab.idiap.ch/software/gridtk"
changelog = "https://gitlab.idiap.ch/software/gridtk/-/releases"

[project.optional-dependencies]
qa = ["pre-commit"]
doc = [
  "sphinx",
  "furo",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "auto-intersphinx",
]
test = ["pytest", "pytest-cov", "coverage"]

[project.scripts]
jman = "gridtk.script.jman:main"

# access to SGE utilities from package installation
qconf = "gridtk.script.grid:main"
qsub = "gridtk.script.grid:main"
qdel = "gridtk.script.grid:main"
qstat = "gridtk.script.grid:main"
qrsh = "gridtk.script.grid:main"
qhost = "gridtk.script.grid:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.system-requirements]
linux = "4.19.0"

[tool.pixi.dependencies]
clapper = "*"
sqlalchemy = "<2"

[tool.pixi.feature.self.pypi-dependencies]
gridtk = { path = ".", editable = true }

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.qa.dependencies]
pre-commit = "*"
ruff = "*"
reuse = "*"

[tool.pixi.feature.qa.tasks]
qa-install = "pre-commit install"
qa = "pre-commit run --all-files"
qa-ci = "pre-commit run --all-files --show-diff-on-failure --verbose"

[tool.pixi.feature.doc.dependencies]
sphinx = "*"
furo = "*"
sphinx-autodoc-typehints = "*"
auto-intersphinx = "*"
sphinx-copybutton = "*"
sphinx-inline-tabs = "*"

[tool.pixi.feature.doc.tasks]
doc-clean = "rm -rf doc/api && rm -rf html"
doc = "sphinx-build -aEW doc html"
doctest = "sphinx-build -aEb doctest doc html/doctest"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = "pytest -sv tests/"
test-ci = "pytest -sv --cov-report 'html:html/coverage' --cov-report 'xml:coverage.xml' --junitxml 'junit-coverage.xml' --ignore '.profile' tests/"

[tool.pixi.feature.build.dependencies]
hatch = "*"
versioningit = "*"
twine = "*"

[tool.pixi.feature.build.tasks]
build = "hatch build"
check = "twine check dist/*"
upload = "twine upload dist/*"

[tool.pixi.feature.dev.dependencies]
pdbpp = "*"
uv = "*"

[tool.pixi.environments]
default = { features = ["qa", "build", "doc", "test", "dev", "py312", "self"] }
qa-ci = { features = ["qa", "py312"] }
build-ci = { features = ["build", "py312"] }
test-ci-alternative = { features = ["test", "py311", "self"] }

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
# Example formatted version: 1.2.4.dev42+ge174a1f
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*.py",
  "tests/**/*.py",
  "tests/**/*.sh",
  "doc/**/*.rst",
  "doc/**/*.json",
  "doc/**/*.txt",
  "doc/**/*.py",
  "LICENSES/*.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gridtk"]

[tool.isort]
profile = "black"
line_length = 80
order_by_type = true
lines_between_types = 1

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = ["--cov=gridtk", "--cov-report=term-missing", "--import-mode=append"]
junit_logging = "all"
junit_log_passing_tests = false
